fix: gap
borrow logic from button css

--- a/registry/nextjs/components/menu-item/menu-item.css
+++ b/registry/nextjs/components/menu-item/menu-item.css
@@ -1,12 +1,17 @@
 [lk-component="menu-item"] {
+  --py: calc(var(--lk-size-lg) * var(--lk-halfstep-dec));
+  --gap: calc(var(--py) / var(--lk-eighthstep));
+
   display: inline-flex;
   align-items: center;
   gap: var(--lk-size-sm);
   border-radius: calc(var(--lk-size-lg) * var(--lk-halfstep-dec));
-  padding-top: calc(var(--lk-size-lg) * var(--lk-halfstep-dec));
-  padding-bottom: calc(var(--lk-size-lg) * var(--lk-halfstep-dec));
+  padding-top: var(--py);
+  padding-bottom: var(--py);
+  gap: var(--gap);
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 
 /* Left padding with start icon */
@@ -28,6 +33,6 @@
   padding-right: var(--body-font-size);
 }
 
-[lk-component="menu-item"]>[lk-component="state-layer"] {
+[lk-component="menu-item"] > [lk-component="state-layer"] {
   border-radius: var(--lk-size-xs);
 }
